--- a/weapp/static_v2/js/view/workbench_property_view/template.html
+++ b/weapp/static_v2/js/view/workbench_property_view/template.html
@@ -462,7 +462,7 @@
 					    <div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
 					    <div class="propertyGroup_property_input" style="position:relative;">
 					        {{html W.data.getDynamicComponentDataForDialogSelectControl(component, field)}}
-					        <input data-field="${field.name}" name="${field.name}" type="hidden" />
+					        <input data-field="${field.name}" name="${field.name}" type="hidden" value="{{if component.model.get(field.name)}}${component.model.get(field.name)}{{else}}{{/if}}"/>
 					        {{if !component.model.get(field.name)}}
 					           <div class="btn btn-small xui-image-dialog-trigger {{if component.model.get(field.name)}}xui-triggerButton-hasdata{{/if}}" data-target-dialog="${field.dialog}" data-dialog-parameter="${field.dialogParameter}"></div>
 					        {{else}}
@@ -513,12 +513,13 @@
                     <div class="propertyGroup_property_productDialogSelectField propertyGroup_property_horizontalField">
                         <div class="propertyGroup_property_label {{if field.validate}}star_show{{/if}}">${field.displayName}</div>
                         <div class="propertyGroup_property_input" style="position:relative;width:20%">
-                            <input class="propertyGroup_property_input" data-field="${field.name}" name="${field.name}" data-type="product" type="hidden"/>
+                            <input class="propertyGroup_property_input" data-field="${field.name}" name="${field.name}" data-type="product" type="hidden" value="{{if component.model.get(field.name)}}${component.model.get(field.name).productId}{{else}}{{/if}}"/>
                             <input class="propertyGroup_property_input product_search"  name="product_name" data-type="product_name" value="{{if component.model.get(field.name)}}${component.model.get(field.name).productName}{{else}}{{/if}}" type="hidden"/>
 
                             <button class="btn xui-i-searchBtn xui-i-triggerButton" data-target-dialog="${field.dialog}">
                                选择商品
                             </button>
+                            <div class="errorHint"></div>
                             {{if component.model.get(field.name)}}
                                <div>
                                   {{html W.data.getDynamicComponentDataForDialogSelectControl(component, field)}}
