--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -166,7 +166,10 @@
                 <button class="btn btn-primary xa-update-btn" aria-hidden="true" style="margin-right: 0;">更新模板</button>
                 <button class="btn btn-success xa-submit-btn" aria-hidden="true">确&nbsp;&nbsp;定</button>
                 <button class="btn btn-default" aria-hidden="true" data-dismiss="modal" >关&nbsp;&nbsp;闭</button>
-
+                <div style="display: none">
+                    <button class="btn btn-default xa-test" aria-hidden="true" >测&nbsp;&nbsp;试</button>
+                    <input type="text" id="test_input" style="line-height: 0; height: 30px;">
+                </div>
             </div>
         </div>
     </div>
@@ -326,8 +329,6 @@
                     {{/each}}
                 </select>
             </label>
-            <label>开头描述：<input type="text" class="form-control xa-template-first" value="{{ ../success.first }}"></label>
-            <label>结尾描述：<input type="text" class="form-control xa-template-remark" value="{{ ../success.remark }}"></label>
         </div>
         <div class="xui-i-setting xui-i-fail-setting xa-fail-setting">
             <label>选择团购失败的消息模板：
@@ -338,7 +339,6 @@
                 </select>
             </label>
             <label>开头描述：<input type="text" class="form-control xa-template-first" value="{{ ../fail.first }}"></label>
-            <label>结尾描述：<input type="text" class="form-control xa-template-remark" value="{{ ../fail.remark }}"></label>
         </div>
         <div class="xui-i-preview">
 
@@ -504,9 +504,7 @@ $(document).ready(function() {
                 };
                 if(!$.isEmptyObject(success_data)){
                     data['success'] = {
-                        "selected_id": success_data.template_id,
-                        "first": success_data.first,
-                        "remark": success_data.remark
+                        "selected_id": success_data.template_id
                     };
                 }else{
                     data['success'] = noop_data;
@@ -515,8 +513,7 @@ $(document).ready(function() {
                 if(!$.isEmptyObject(fail_data)){
                     data['fail'] = {
                         "selected_id": fail_data.template_id,
-                        "first": fail_data.first,
-                        "remark": fail_data.remark
+                        "first": fail_data.first
                     };
                 }else{
                     data['fail'] = noop_data;
@@ -531,12 +528,9 @@ $(document).ready(function() {
         },
         _getFormData: function(){
             var success_template_id = this.$el.find('.xa-success-setting .xa-template-selector').val();
-            var success_first = this.$el.find('.xa-success-setting .xa-template-first').val();
-            var success_remark = this.$el.find('.xa-success-setting .xa-template-remark').val();
 
             var fail_template_id = this.$el.find('.xa-fail-setting .xa-template-selector').val();
             var fail_first = this.$el.find('.xa-fail-setting .xa-template-first').val();
-            var fail_remark = this.$el.find('.xa-fail-setting .xa-template-remark').val();
 
             var serials_arr = [];
             if(success_template_id != '') serials_arr.push(success_template_id);
@@ -547,14 +541,11 @@ $(document).ready(function() {
                 "template_ids": serials_arr.toString(),
                 "template_settings": JSON.stringify({
                     "success": {
-                        "template_id": success_template_id,
-                        "first": success_first,
-                        "remark": success_remark
+                        "template_id": success_template_id
                     },
                     "fail": {
                         "template_id": fail_template_id,
-                        "first": fail_first,
-                        "remark": fail_remark
+                        "first": fail_first
                     }
                 })
             }
@@ -613,6 +604,22 @@ $(document).ready(function() {
         });
     });
 
+});
+$('.xa-test').on('click', function(){
+    W.getApi().call({
+        app: 'apps/group',
+        resource: 'cancel_unpaid_group',
+        method: 'post',
+        args: {
+            "args": $('#test_input').val()
+        },
+        success: function(data) {
+            console.log(data);
+        },
+        error: function(resp) {
+            console.log(resp);
+        }
+    });
 });
 </script>
 {% endblock %}
