--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -39,12 +39,26 @@
     }
     .xui-template-modal-body label{
         display: block;
+        font-size: 18px;
+        font-weight: bold;
+    }
+    .xui-template-modal-body label select{
+        width: 50%;
+        font-weight: 100;
+        height: 35px;
+        border: 1px solid rgba(128, 128, 128, 0.31);
+        border-radius: 5px;
+    }
+    .xui-template-modal-body input{
+        height: 35px;
+        border: 1px solid rgba(128, 128, 128, 0.31);
+        border-radius: 5px;
     }
     .xui-template-modal-body .xui-i-setting{
         border: 1px solid #EAEEF7;
         border-radius: 5px;
         padding: 10px;
-        margin-bottom: 10px;
+        margin-bottom: 15px;
         margin-left: -15px;
     }
 
@@ -322,26 +336,29 @@
 <script id="group-template-setting-dialog-tmpl-src" type="text/x-handlebar-tmpl">
     {{#if hasData }}
         <div class="xui-i-setting xui-i-success-setting xa-success-setting">
-            <label>选择团购成功的消息模板：
+            <label>选择团购成功的消息模板:
                 <select class="form-control xa-template-selector" style="width: 50%">
+                    <option value="" {{#ifequal success.selected_id ""}}selected{{/ifequal}}>不发送模板消息</option>
                     {{#each templates}}
-                        <option value="{{ template_id }}" {{#ifCond ../success.selected_id "==" template_id}}selected{{/ifCond}}>{{ template_title }}</option>
+                    {{#ifCond template_title "==" "拼团成功通知"}}
+                        <option value="{{ template_id }}" {{#ifequal ../../success.selected_id template_id}}selected{{/ifequal}}>{{ template_title }}</option>
+                    {{/ifCond}}
                     {{/each}}
                 </select>
             </label>
         </div>
         <div class="xui-i-setting xui-i-fail-setting xa-fail-setting">
-            <label>选择团购失败的消息模板：
+            <label>选择团购失败的消息模板:
                 <select class="form-control xa-template-selector" style="width: 50%">
+                    <option value="" {{#ifequal fail.selected_id ""}}selected{{/ifequal}}>不发送模板消息</option>
                     {{#each templates}}
-                        <option value="{{ template_id }}" {{#ifCond ../fail.selected_id "==" template_id}}selected{{/ifCond}}>{{ template_title }}</option>
+                    {{#ifCond template_title "==" "拼团退款提醒"}}
+                        <option value="{{ template_id }}" {{#ifequal ../../fail.selected_id template_id}}selected{{/ifequal}}>{{ template_title }}</option>
+                    {{/ifCond}}
                     {{/each}}
                 </select>
             </label>
-            <label>开头描述：<input type="text" class="form-control xa-template-first" value="{{ ../fail.first }}"></label>
-        </div>
-        <div class="xui-i-preview">
-
+            <label>问候语：<input type="text" class="form-control xa-template-first" value="{{ ../fail.first }}"></label>
         </div>
     {{else}}
         <p>获取模板信息失败</p>
@@ -491,8 +508,6 @@ $(document).ready(function() {
             var data = $.extend({
                 "hasData": 0
             }, this.data);
-            console.log(data);
-            console.log('asjhdkajshfklashfladhfkl');
             if(data.control_data){
                 var control = data.control_data;
                 var success_data = control.success;
@@ -552,7 +567,6 @@ $(document).ready(function() {
 
         },
         onClickSubmit: function(){
-            console.log('submit');
             var that = this;
             W.getApi().call({
                 app: 'apps',
@@ -580,7 +594,6 @@ $(document).ready(function() {
                     method: 'get',
                     args: $.extend(args, {"apps_type": APPS_TYPE}),
                     success: function(data) {
-                        console.log(data, 'reeee');
                         that.data = data;
                         that.render();
                     },
@@ -593,10 +606,6 @@ $(document).ready(function() {
         }
     });
     //模板消息弹窗
-    console.log('------------');
-    console.log(initData);
-    console.log('------------');
-    console.log(JSON.parse(initData));
     $('.xa-template-setting').on('click', function(){
         W.dialog.showDialog('W.dialog.group.templateDialog',{
             initData: initData=="" ? false: JSON.parse(initData),
@@ -605,10 +614,11 @@ $(document).ready(function() {
     });
 
 });
+//测试发送模板，输入框内格式   71,72,73-success
 $('.xa-test').on('click', function(){
     W.getApi().call({
         app: 'apps/group',
-        resource: 'cancel_unpaid_group',
+        resource: 'test_group_template',
         method: 'post',
         args: {
             "args": $('#test_input').val()
