兑换卡列表url

--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange_list.html
@@ -137,7 +137,7 @@
 				<div class="xui-text xui-remain">账户余额</div>
 					<div>
 						<span class="xui-yuan">&yen;</span>
-						<span class="xui-large">{{2000.00}}</span>
+						<span class="xui-large">2000.00</span>
 					</div>				
 			</div>
 			<div class="xui-header-right">
@@ -145,7 +145,7 @@
 					<img src="/markettools_static/weizoom_card/img/user.png" width="14px" height="16px" />
 					<span class="xui-phone-num">{{18510168569}}</span>
 				</div>
-				<div class="xui-text">可用数量：{{5}}张</div>
+				<div class="xui-text">可用数量：5张</div>
 			</div>
 		</div>
 		<div class="xui-content">
@@ -157,21 +157,21 @@
 								<div>余额</div>
 								<div class="xui-remain-money">
 									<span class="xui-yuan">&yen;</span>
-									<span class="xui-num">{{168.00}}</span>
+									<span class="xui-num">168.00</span>
 								</div>
 							</div>
 							<div class="xui-detail-right">
 								<a href="javascript:void(0);" class="xui-check-detail">查看详情</a>
 								<div>
 									<span>卡号:</span> 
-									<span class="xui-numfont">{{9000012}}</span>
+									<span class="xui-numfont">9000012</span>
 								</div>
 							</div>
 						</div>
 						<div class="xui-detail-bottom">
 							<span>
-								<span class="xui-numfont">{{2016-03-16}}</span>
-								<span class="xui-text">{{兑换平台}}</span>
+								<span class="xui-numfont">2016-03-16</span>
+								<span class="xui-text">兑换平台</span>
 								<span class="fr">
 									面值:&yen;
 									<span class="xui-numfont">200.00</span>
@@ -202,7 +202,7 @@
 						</div>
 						<div class="xui-detail-bottom">
 							<span>
-								<span class="xui-numfont">{{2016-03-16}}</span>
+								<span class="xui-numfont">2016-03-16</span>
 								<span class="xui-text">兑换平台</span>
 								<span class="fr">
 									面值: &yen; 
