--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -164,7 +164,7 @@
 		  {{each(i, item) items}}
 			<tr data-id="${item.id}">
 				<td>
-					${item.group_leader_name|html}
+					{{html item.group_leader_name}}
 				</td>
 				<td >
 					{{if (item.rest_days <= 3)}}
