--- a/weapp/apps/customerized_apps/group/templates/editor/workbench.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/workbench.html
@@ -249,22 +249,22 @@
           var that = this;
 
       /*提交前校验数据状态*/
-      if(!validate_group_flag){
-        if(validate_group_type=='product'){
-            W.showHint('error', '请选择团购商品！');
-        }else if(validate_group_type=='group_blank'){
-            W.showHint('error', '团购设置和数据不能为空！');
-        }else if(validate_group_type=='group_same'){
-            W.showHint('error', '团购类型不能相同！');
-        }else if(validate_group_type=='group_notInt'){
-            W.showHint('error', '团购天数应为整数！');
-        }else if(validate_group_type=='group_notFloat'){
-            W.showHint('error', '团购价格应为两位小数或整数！');
-        }else if(validate_group_type=='img'){
-            W.showHint('error', '请选择团购分享图片！');
-        }
-        return false;
-      }
+      // if(!validate_group_flag){
+      //   if(validate_group_type=='product'){
+      //       W.showHint('error', '请选择团购商品！');
+      //   }else if(validate_group_type=='group_blank'){
+      //       W.showHint('error', '团购设置和数据不能为空！');
+      //   }else if(validate_group_type=='group_same'){
+      //       W.showHint('error', '团购类型不能相同！');
+      //   }else if(validate_group_type=='group_notInt'){
+      //       W.showHint('error', '团购天数应为整数！');
+      //   }else if(validate_group_type=='group_notFloat'){
+      //       W.showHint('error', '团购价格应为两位小数或整数！');
+      //   }else if(validate_group_type=='img'){
+      //       W.showHint('error', '请选择团购分享图片！');
+      //   }
+      //   return false;
+      // }
 
 
         // 保存model
