--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group_list.html
@@ -203,7 +203,7 @@
                         <div class="xui-all_groups_can_join-slide none">
                         {% if all_groups_can_open %}
                             <ul class="xui-listItem">
-                            {% for group_item in all_groups_can_open %}
+                            {% for group_item in all_groups %}
                                 <li data-icon="true" class="xui-listInner">
                                     <div class="wui-i-imgBox">
                                         <img src="{{ group_item.product_img }}" class="xui-i-content-img">
