出错时隐藏loading动画元素

--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -343,6 +343,8 @@
                 }
             },
             error: function(data) {
+                //隐藏loading动画元素
+                loadingStatus(false);
                 if(data.errMsg == 'is_deleted'){
                     deletedRecord();
                 }else{
