更新消息模板接口

--- a/weapp/apps/customerized_apps/group/templates/editor/groups.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/groups.html
@@ -62,6 +62,10 @@
         margin-left: -15px;
     }
 
+    .xui-template-modal-body .xui-i-preview{
+        margin: 0;
+    }
+
 </style>
 {% endblock %}
 
@@ -346,6 +350,13 @@
                     {{/each}}
                 </select>
             </label>
+            <div class="xui-i-setting xui-i-preview xa-success-preview">
+                <label>预览</label>
+                <p>您参团的商品[xxx]已组团成功,预计将在团购结束20天内发货</p>
+                <p>商品价格: ￥158</p>
+                <p>订单号: tn12345902314</p>
+                <p>点击查看团购活动详情</p>
+            </div>
         </div>
         <div class="xui-i-setting xui-i-fail-setting xa-fail-setting">
             <label>选择团购失败的消息模板:
@@ -358,8 +369,17 @@
                     {{/each}}
                 </select>
             </label>
-            <label>问候语：<input type="text" class="form-control xa-template-first" value="{{ ../fail.first }}"></label>
+            <label>问候语：<input type="text" placeholder="25字以内" maxlength="50" class="form-control xa-template-first" value="{{ ../fail.first }}"></label>
+            <div class="xui-i-setting xui-i-preview xa-success-preview">
+                <label>预览</label>
+                <p class="xa-fail-need-change-first">{{ ../fail.first }}</p>
+                <p>单号: tn12345902314</p>
+                <p>商品: xxx</p>
+                <p>退款: [￥158] 将在5~7个工作日内完成退款</p>
+                <p>点击查看团购活动详情</p>
+            </div>
         </div>
+
     {{else}}
         <p>获取模板信息失败</p>
     {{/if}}
@@ -497,6 +517,9 @@ $(document).ready(function() {
         bindListeners: function(){
             this.$dialog.delegate('.xa-submit-btn', 'click', this.onClickSubmit.bind(this));
             this.$dialog.delegate('.xa-update-btn', 'click', this.onClickUpdate.bind(this));
+
+            this.$dialog.delegate('.xa-template-selector', 'click', this.onSelectTemplate);
+            this.$dialog.delegate('.xa-fail-setting .xa-template-first', 'keyup', this.onChangeFailFirst);
         },
         show: function(){
             this.$dialog.modal('show');
@@ -540,6 +563,19 @@ $(document).ready(function() {
         },
         onClickUpdate: function(){
             this.getData({"action": 1});
+        },
+        onSelectTemplate: function(){
+            var $this = $(this);
+            var v = $this.val();
+            var $pre = $this.parents('.xui-i-setting').eq(0).find('.xui-i-preview');
+            if(v == ""){
+                $pre.hide();
+            }else{
+                $pre.show();
+            }
+        },
+        onChangeFailFirst: function(){
+            $('.xa-fail-need-change-first').html($(this).val());
         },
         _getFormData: function(){
             var success_template_id = this.$el.find('.xa-success-setting .xa-template-selector').val();
