--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -393,63 +393,66 @@
                 $('.wa-closed').show();
             }
         }
-        //团购成功、团购失败状态
-        if (W.group_status == '团购进行中' || W.group_status == '团购未生效' || W.group_status == ''){
-            //如果是自己的主页
-            if(is_self_page){
-                if(W.group_status == '团购未生效'){
-                    openUnpaidWin();
-                }
-                if(is_group_leader){
-                    $('.wa-using').text('邀请好友参团').on('click', function(){
-                            openGuideMask();
-                        }).show();
-                }else{
-                    if(only_remain_one_day){
-                        openRemainOneDayWin();
+        if('进行中' == W.activityStatus){
+            //团购成功、团购失败状态
+            if (W.group_status == '团购进行中' || W.group_status == '团购未生效' || W.group_status == ''){
+                //如果是自己的主页
+                if(is_self_page){
+                    if(W.group_status == '团购未生效'){
+                        openUnpaidWin();
                     }
-                    $('.wa-using-join').text('直接参团').on('click', openJoinGruop).show();
-                    if(W.isMember){
-                        $('.wa-using').text('我要开团').on('click', openGruop).show();
+                    if(is_group_leader){
+                        $('.wa-using').text('邀请好友参团').on('click', function(){
+                                openGuideMask();
+                            }).show();
                     }else{
-                        $('.wa-using').text('我要开团').on('click', openGuestMask).show();
+                        if(only_remain_one_day){
+                            openRemainOneDayWin();
+                        }
+                        $('.wa-using-join').text('直接参团').on('click', openJoinGruop).show();
+                        if(W.isMember){
+                            $('.wa-using').text('我要开团').on('click', openGruop).show();
+                        }else{
+                            $('.wa-using').text('我要开团').on('click', openGuestMask).show();
+                        }
+                    }
+                }else{
+                    if(W.group_status == '团购进行中'){
+                        var $powerBtn = $('.wa-power');
+                        if(!is_helped){
+                            if(is_helper_unpaid){
+                                openUnpaidWin();
+                            }
+                            $powerBtn.find('.wa-power-btn-action').html('我要参团');
+                            $powerBtn.on('click', function(){
+                                    JoinGroup();
+                                }).show();
+                            $('.wa-using-join').text('看看还有什么团').on('click', openJoinGruop).show();
+                        }else{
+                            $('.wa-using').text('邀请好友参团').on('click', openGuideMask).show();
+                            $('.wa-using-join').text('我要开团').on('click', openJoinGruop).show();
+                        }
+                    }else{
+                        $('.wa-using-join').text('直接参团').on('click', openJoinGruop).show();
+                        if(W.isMember){
+                            $('.wa-using').text('我要开团').on('click', openGruop).show();
+                        }else{
+                            $('.wa-using').text('我要开团').on('click', openGuestMask).show();
+                        }
                     }
                 }
             }else{
-                if(W.group_status == '团购进行中'){
-                    var $powerBtn = $('.wa-power');
-                    if(!is_helped){
-                        if(is_helper_unpaid){
-                            openUnpaidWin();
-                        }
-                        $powerBtn.find('.wa-power-btn-action').html('我要参团');
-                        $powerBtn.on('click', function(){
-                                JoinGroup();
-                            }).show();
-                        $('.wa-using-join').text('看看还有什么团').on('click', openJoinGruop).show();
-                    }else{
-                        $('.wa-using').text('邀请好友参团').on('click', openGuideMask).show();
-                        $('.wa-using-join').text('我要开团').on('click', openJoinGruop).show();
-                    }
-                }else{
-                    $('.wa-using-join').text('直接参团').on('click', openJoinGruop).show();
-                    if(W.isMember){
-                        $('.wa-using').text('我要开团').on('click', openGruop).show();
-                    }else{
-                        $('.wa-using').text('我要开团').on('click', openGuestMask).show();
-                    }
+                $('.wa-using-join').text('看看还有什么团').on('click', openJoinGruop).show();
+                if (W.group_status == '团购成功'){
+                    showGroupSuccess();
+                }
+                if(W.group_status == '团购失败'){
+                    showGroupFailure();
                 }
             }
         }else{
             $('.wa-using-join').text('看看还有什么团').on('click', openJoinGruop).show();
-            if (W.group_status == '团购成功'){
-                showGroupSuccess();
-            }
-            if(W.group_status == '团购失败'){
-                showGroupFailure();
-            }
         }
-
     }
     //我要开团
 	function openGruop(){
