未生效的隐藏

--- a/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
+++ b/weapp/apps/customerized_apps/group/templates/editor/group_participances.html
@@ -186,11 +186,11 @@
 					 {{/if}}
 				</td>
 				<td style="font-weight: bold;">
-					{{if (item.status === '团购未生效')}}
+<!-- 					{{if (item.status === '团购未生效')}}
 						<div class="xui-i-status xui-i-gbtn_normal" style="color:#343434;">
-						进行中
+						未生效
 						</div>
-					{{/if}}
+					{{/if}} -->
 					{{if (item.status === '团购进行中')}}
 						<div class="xui-i-status xui-i-gbtn_normal" style="color:#343434;">
 						进行中
