--- a/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
+++ b/weapp/market_tools/tools/card_exchange/templates/card_exchange/webapp/m_card_exchange.html
@@ -337,7 +337,7 @@
 					<p class="xa-reminder-detail">
 						微众卡将存到个人中心--微众卡余额查询中，请注意查收！
 					</p>
-					<button class="xa-exchanged">知道了</button>
+					<a href="" class="xa-exchanged-a"><button class="xa-exchanged">知道了</button></a>
 					<a href="javascript:void(0)" class="xui-alert-close xa-alert-close">&times;</a>
 				</div>
 			</div>
@@ -499,7 +499,8 @@
 						success: function(data) {
 							$('.xa-reminder-title').html('兑换成功').removeClass('error');
 							$('.xa-reminder-detail').html('微众卡将存到个人中心--微众卡余额查询中，请注意查收！');
-							$('.xa-exchanged').css('background-color', '#0091d5');
+							$('.xa-exchanged').css('background-color', '#0091d5').text('立即查收');
+							$('.xa-exchanged-a').attr('href','/workbench/jqm/preview/?module=market_tool:weizoom_card&model=weizoom_card_exchange_list&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0')
 							$('.xa-alert-exchange').removeClass('hidden');
 							// $('.xa-exchange-submit').text('已兑换');
 							$('.xa-current-integral').text(data);
@@ -507,6 +508,7 @@
 						error: function(data){
 							$('.xa-reminder-title').html('兑换失败').addClass('error');
 							$('.xa-exchanged').css('background-color', '#ee3715');
+							$('.xa-exchanged-a').attr('href','')
 							$('.xa-reminder-detail').html(data.errMsg || '兑换失败');
 							$('.xa-alert-exchange').removeClass('hidden');
                             // submit_control = false;
@@ -516,6 +518,7 @@
 					$('.xa-reminder-title').html('兑换失败').addClass('error');
 					$('.xa-reminder-detail').html('现在积分不足,快去获取更多积分吧！');
 					$('.xa-exchanged').css('background-color', '#ee3715');
+					$('.xa-exchanged-a').attr('href','')
 					$('.xa-alert-exchange').removeClass('hidden');
                     // submit_control = false;
 				}
