--- a/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
+++ b/weapp/market_tools/tools/weizoom_card/templates/weizoom_card/webapp/weizoom_card_change_info.html
@@ -133,6 +133,10 @@
 	.xui-order-info-money{
 		font-weight: 500;
 	}
+	.xui-validDate{
+		display: block;
+		text-align: center;
+	}
 </style>
 {% endblock %}
 {% block content-panel %}
@@ -140,18 +144,21 @@
 	<div data-role="content" data-theme="x">
 			<div class="xui-section-item xui-main-info">
 				<div class="xui-fl">
-					<div>微众卡号：<span class="xui-numTips">{{weizoom_card.weizoom_card_id}}</span></div>
+					<div>微众卡号：</div>
+					<div class="xui-numTips">{{weizoom_card.weizoom_card_id}}</div>	
 					<div>密码：
 						<span class="xui-numTips xui-password xa-password">{{weizoom_card.password}}</span>
 						<a href="javascript:void(0)" class="xui-hidden xa-hidden">隐藏</a>
 					</div>
-					<a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_quit=1" class="xui-exit" >退出登陆</a>
+					<!-- <a href="/workbench/jqm/preview/?module=market_tool:weizoom_card&model=weizoom_card_login&action=get&workspace_id=market_tool:weizoom_card&webapp_owner_id={{request.webapp_owner_id}}&project_id=0&is_quit=1" class="xui-exit" >退出登陆</a> -->
 				</div>
 				<div class="xui-fr">
 					<span class="xui-textTips">余额</span>
 					<div>¥<b class="xui-numTips">{{weizoom_card.money}}</b></div>
+					<span class="xui-validDate">有效期至：</span>
 				</div>
 			</div>
+			<div>使用条件：满40.00元可用/不限制</div>
 			<div class="xui-use-detail">
 				<div class="xui-use"><b>使用详情</b></div>
 				<table>
