增加模板消息

--- a/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
+++ b/weapp/apps/customerized_apps/group/templates/webapp/m_group.html
@@ -184,8 +184,8 @@
     <div class="wui-i-description wui-i-product-description">
         <div class="xui-section xui-production-panel pt0 xa-production" style="border:0;">
             <div class="xui-section-title xui-section-item zoom">
-                <div class="wui-i-product-description-title" style="text-align: center;color: #E6E6E6">滑动查看详情</div>
-                <div class="xui-productDetail-content rawHtml c3 pt10 xa-productDetail-content">
+                <div class="wui-i-product-description-title pt10" style="text-align: center;color: #E6E6E6">滑动查看详情</div>
+                <div class="xui-productDetail-content rawHtml pt10 pl10 pb10 xa-productDetail-content">
                 {{ product_detail|safe }}
                 </div>
             </div>
